syntax = "proto3";

package proto;

option go_package = "github.com/wesleywu/ri-service-provider/app/videocollection/service/proto;proto";
option java_multiple_files = true;
option java_package = "repo.video_collection.v1";
option java_outer_classname = "VideoCollectionV1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "tagger/tagger.proto";
import "goguru/annotations/annotations.proto";
import "goguru/query/condition.proto";
import "goguru/query/query.proto";
import "goguru/types/objectid.proto";
import "app/videocollection/service/enum/video_collection_enum.proto";
import "app/videocollection/service/proto/video_collection.proto";

message VideoCollectionCountReq {
  google.protobuf.Any                  id            = 1;
  google.protobuf.Any                  name          = 2;
  google.protobuf.Any                  contentType   = 3;
  google.protobuf.Any                  filterType    = 4;
  google.protobuf.Any                  count         = 5;
  google.protobuf.Any                  isOnline      = 6;
  google.protobuf.Any                  createdAt     = 7;
  google.protobuf.Any                  updatedAt     = 8;
  repeated goguru.query.PropertyFilter extraFilters  = 1001;
}

message VideoCollectionCountRes {
  int64                                totalElements = 1  [(tagger.tags) = "json:\"total\""];
}

message VideoCollectionOneReq {
  google.protobuf.Any                  id            = 1;
  google.protobuf.Any                  name          = 2;
  google.protobuf.Any                  contentType   = 3;
  google.protobuf.Any                  filterType    = 4;
  google.protobuf.Any                  count         = 5;
  google.protobuf.Any                  isOnline      = 6;
  google.protobuf.Any                  createdAt     = 7;
  google.protobuf.Any                  updatedAt     = 8;
  repeated goguru.query.PropertyFilter extraFilters  = 1001;
}

message VideoCollectionOneRes {
  bool                                 found         = 1;
  optional VideoCollectionItem         item          = 2;
}

message VideoCollectionListReq {
  google.protobuf.Any                  id            = 1;
  google.protobuf.Any                  name          = 2;
  google.protobuf.Any                  contentType   = 3;
  google.protobuf.Any                  filterType    = 4;
  google.protobuf.Any                  count         = 5;
  google.protobuf.Any                  isOnline      = 6;
  google.protobuf.Any                  createdAt     = 7;
  google.protobuf.Any                  updatedAt     = 8;
  repeated goguru.query.PropertyFilter extraFilters  = 1001;
  goguru.query.PageRequest             pageRequest   = 1002;
}

message VideoCollectionListRes {
  goguru.query.PageInfo                pageInfo      = 1  [(tagger.tags) = "json:\"pageInfo\""];
  repeated VideoCollectionItem         items         = 2  [(tagger.tags) = "json:\"items\""];
}

message VideoCollectionGetReq {
  string                               id            = 1  [(tagger.tags) = "bson:\"-\" json:\"id\""];
}

message VideoCollectionGetRes {
  optional goguru.types.ObjectID       id            = 1  [(tagger.tags) = "bson:\"_id,omitempty\" json:\"id,omitempty\""];
  optional string                      name          = 2  [(tagger.tags) = "bson:\"name,omitempty\" json:\"name,omitempty\""];
  optional ContentType                 contentType   = 3  [(tagger.tags) = "bson:\"contentType,omitempty\" json:\"contentType,omitempty\""];
  optional FilterType                  filterType    = 4  [(tagger.tags) = "bson:\"filterType,omitempty\" json:\"filterType,omitempty\""];
  optional uint32                      count         = 5  [(tagger.tags) = "bson:\"count,omitempty\" json:\"count,omitempty\""];
  optional bool                        isOnline      = 6  [(tagger.tags) = "bson:\"isOnline,omitempty\" json:\"isOnline,omitempty\""];
  optional google.protobuf.Timestamp   createdAt     = 7  [(tagger.tags) = "bson:\"createdAt,omitempty\" json:\"createdAt,omitempty\""];
  optional google.protobuf.Timestamp   updatedAt     = 8  [(tagger.tags) = "bson:\"updatedAt,omitempty\" json:\"updatedAt,omitempty\""];
}

message VideoCollectionCreateReq {
  optional string                      name          = 2  [(tagger.tags) = "bson:\"name,omitempty\" json:\"name,omitempty\""];
  optional ContentType                 contentType   = 3  [(tagger.tags) = "bson:\"contentType,omitempty\" json:\"contentType,omitempty\""];
  optional FilterType                  filterType    = 4  [(tagger.tags) = "bson:\"filterType,omitempty\" json:\"filterType,omitempty\""];
  optional uint32                      count         = 5  [(tagger.tags) = "bson:\"count,omitempty\" json:\"count,omitempty\""];
  optional bool                        isOnline      = 6  [(tagger.tags) = "bson:\"isOnline,omitempty\" json:\"isOnline,omitempty\""];
  optional google.protobuf.Timestamp   createdAt     = 7  [(tagger.tags) = "bson:\"createdAt,omitempty\" json:\"createdAt,omitempty\""];
  optional google.protobuf.Timestamp   updatedAt     = 8  [(tagger.tags) = "bson:\"updatedAt,omitempty\" json:\"updatedAt,omitempty\""];
}

message VideoCollectionCreateRes {
  string                               message       = 1  [(tagger.tags) = "json:\"message\""];
  optional string                      insertedID    = 2  [(tagger.tags) = "json:\"insertedID\""];
  int64                                insertedCount = 3  [(tagger.tags) = "json:\"insertedCount\""];
}

message VideoCollectionUpdateReq {
  string                               id            = 1  [(tagger.tags) = "bson:\"-\" json:\"id\""];
  optional string                      name          = 2  [(tagger.tags) = "bson:\"name,omitempty\" json:\"name,omitempty\""];
  optional ContentType                 contentType   = 3  [(tagger.tags) = "bson:\"contentType,omitempty\" json:\"contentType,omitempty\""];
  optional FilterType                  filterType    = 4  [(tagger.tags) = "bson:\"filterType,omitempty\" json:\"filterType,omitempty\""];
  optional uint32                      count         = 5  [(tagger.tags) = "bson:\"count,omitempty\" json:\"count,omitempty\""];
  optional bool                        isOnline      = 6  [(tagger.tags) = "bson:\"isOnline,omitempty\" json:\"isOnline,omitempty\""];
  optional google.protobuf.Timestamp   createdAt     = 7  [(tagger.tags) = "bson:\"createdAt,omitempty\" json:\"createdAt,omitempty\""];
  optional google.protobuf.Timestamp   updatedAt     = 8  [(tagger.tags) = "bson:\"updatedAt,omitempty\" json:\"updatedAt,omitempty\""];
}

message VideoCollectionUpdateRes {
  string                               message       = 1  [(tagger.tags) = "json:\"message\""];
  int64                                matchedCount  = 3  [(tagger.tags) = "json:\"matchedCount\""]; // The number of documents matched by the upsert operation
  int64                                modifiedCount = 4  [(tagger.tags) = "json:\"modifiedCount\""]; // The number of documents modified by the operation.
}

message VideoCollectionUpsertReq {
  string                               id            = 1  [(tagger.tags) = "bson:\"-\" json:\"id\""];
  optional string                      name          = 2  [(tagger.tags) = "bson:\"name,omitempty\" json:\"name,omitempty\""];
  optional ContentType                 contentType   = 3  [(tagger.tags) = "bson:\"contentType,omitempty\" json:\"contentType,omitempty\""];
  optional FilterType                  filterType    = 4  [(tagger.tags) = "bson:\"filterType,omitempty\" json:\"filterType,omitempty\""];
  optional uint32                      count         = 5  [(tagger.tags) = "bson:\"count,omitempty\" json:\"count,omitempty\""];
  optional bool                        isOnline      = 6  [(tagger.tags) = "bson:\"isOnline,omitempty\" json:\"isOnline,omitempty\""];
  optional google.protobuf.Timestamp   createdAt     = 7  [(tagger.tags) = "bson:\"createdAt,omitempty\" json:\"createdAt,omitempty\""];
  optional google.protobuf.Timestamp   updatedAt     = 8  [(tagger.tags) = "bson:\"updatedAt,omitempty\" json:\"updatedAt,omitempty\""];
}

message VideoCollectionUpsertRes {
  string                               message       = 1  [(tagger.tags) = "json:\"message\""];
  optional string                      upsertedID    = 2  [(tagger.tags) = "json:\"upsertedID\""];
  int64                                matchedCount  = 3  [(tagger.tags) = "json:\"matchedCount\""]; // The number of documents matched by the upsert operation
  int64                                modifiedCount = 4  [(tagger.tags) = "json:\"modifiedCount\""]; // The number of documents modified by the operation.
  int64                                upsertedCount = 5  [(tagger.tags) = "json:\"upsertedCount\""]; // The number of documents upserted by the operation.
}

message VideoCollectionDeleteReq {
  string                               id            = 1  [(tagger.tags) = "bson:\"-\" json:\"id\""];
}

message VideoCollectionDeleteRes {
  string                               message       = 1  [(tagger.tags) = "json:\"message\""];
  int64                                deletedCount  = 3  [(tagger.tags) = "json:\"deletedCount\""];
}

message VideoCollectionDeleteMultiReq {
  google.protobuf.Any                  id           = 1;
  google.protobuf.Any                  name         = 2;
  google.protobuf.Any                  contentType  = 3;
  google.protobuf.Any                  filterType   = 4;
  google.protobuf.Any                  count        = 5;
  google.protobuf.Any                  isOnline     = 6;
  google.protobuf.Any                  createdAt    = 7;
  google.protobuf.Any                  updatedAt    = 8;
  repeated goguru.query.PropertyFilter extraFilters = 1001;
}

message VideoCollectionDeleteMultiRes {
  string                               message       = 1  [(tagger.tags) = "json:\"message\""];
  int64                                deletedCount  = 3  [(tagger.tags) = "json:\"deletedCount\""];
}